fix: canvas covers available screen w/o scroll

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   cursor: none;
+  overflow: hidden;
 }
 
 body {
